--- a/index.html
+++ b/index.html
@@ -25,20 +25,6 @@
         <H2 class="intext">Kies hier een restaurant om te gaan dineren op valentijn <3</H2>
 <!--        <img src="Images/graysquare.png" alt="foto"><img/>-->
     </section>
-
-    <section class="voorstelling">
-        <form
-                action="https://formspree.io/f/mzbqbkoe"
-                method="POST"
-        >
-            <select name = "dropdown" class="dropdown">
-                <option value = "Ristorante Guzzi" selected>Ristorante Guzzi</option>
-                <option value = "wijnbistro Convento" >wijnbistro Convento</option>
-                <option value = "Nirvana Kitchen">Nirvana Kitchen</option>
-            </select>
-            <button class="btn btn-primary mt-2" type="submit">Send</button>
-        </form>
-    </section>
 </article>
     <article class="insta">
         <section>
@@ -59,6 +45,19 @@
             </div>
         </section>
     </article>
+    <section class="voorstelling">
+        <form
+                action="https://formspree.io/f/mzbqbkoe"
+                method="POST"
+        >
+            <select name = "dropdown" class="dropdown">
+                <option value = "Ristorante Guzzi" selected>Ristorante Guzzi</option>
+                <option value = "wijnbistro Convento" >wijnbistro Convento</option>
+                <option value = "Nirvana Kitchen">Nirvana Kitchen</option>
+            </select>
+            <button class="btn btn-primary mt-2" type="submit"><p>Send</p></button>
+        </form>
+    </section>
 
 </main>
 <!--<footer>
