--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="links">
                 <p>wijnbistro Convento</p>
                 <a href="https://www.wijnbistro.convento.be">read more</a>
-                <img src="images/convento" class="convento">
+                <img src="images/convento.png" class="convento">
             </div>
             <div class="rechts">
                 <p> Nirvana Kitchen</p>
@@ -57,6 +57,11 @@
             </select>
             <button class="btn btn-primary mt-2" type="submit"><p>Send</p></button>
         </form>
+    </section>
+    <section>
+        <footer>
+            <p>© 2023 Chloë</p>
+        </footer>
     </section>
 
 </main>
