--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>Voor jou zou ik de maan blussen</h1>
         <ul>
             <li><a class="current" href="Index.html">Chloë</a> </li>
+            <!--<li><a href="2023.html">2023</a> </li>-->
         </ul>
     </nav>
     </header>
@@ -22,26 +23,35 @@
 <main class="Homepagina">
 <article class="inleiding">
     <section class="groepsfoto">
-        <H2 class="intext">Kies hier een restaurant om te gaan dineren op valentijn <3</H2>
+        <H2 class="intext">Kies hier het hotel voor in Brussel</H2>
 <!--        <img src="Images/graysquare.png" alt="foto"><img/>-->
     </section>
 </article>
     <article class="insta">
         <section>
-        <div class="rechts"><p>Ristorante Guzzi</p>
-            <a href="https://www.ristoranteguzzi.be/nl/home">read more</a>
-            <img src="images/guzzi.png"  alt="guzzi">
-        </div>
-
+            <div class="rechts"><p>Barsey hotel</p>
+                <a href="https://www.booking.com/hotel/be/barsey-hotel-warwick.nl.html?aid=304142&label=gen173nr-1FCAEoggI46AdIM1gEaBWIAQGYARy4AQfIAQ3YAQHoAQH4AQuIAgGoAgO4Apaf7p0GwAIB0gIkOGQ4ZmEyMzktYTA5Ny00NjE2LWE4MzgtY2U3ZDQ1MmI4NWVj2AIG4AIB&sid=8c2cf7d3c078e9d81f8744c98543fe93&all_sr_blocks=2058401_340026314_0_2_0;checkin=2023-02-01;checkout=2023-02-02;dest_id=20584;dest_type=hotel;dist=0;group_adults=2;group_children=0;hapos=1;highlighted_blocks=2058401_340026314_0_2_0;hpos=1;matching_block_id=2058401_340026314_0_2_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=2058401_340026314_0_2_0__11824;srepoch=1673236480;srpvid=d7c21b7f2c110137;type=total;ucfs=1&#hotelTmpl">read more</a>
+                <img src="images/Hotel_Barsey_by_Warwick.png"  alt="Hotel_Barsey_by_Warwick">
+            </div>
             <div class="links">
-                <p>wijnbistro Convento</p>
-                <a href="https://www.wijnbistro.convento.be">read more</a>
-                <img src="images/convento.png" class="convento">
+                <p>Numa l lief</p>
+                <a href="https://www.booking.com/hotel/be/numa-l-lief.nl.html?aid=304142&label=gen173nr-1FCAEoggI46AdIM1gEaBWIAQGYARy4AQfIAQ3YAQHoAQH4AQuIAgGoAgO4Apaf7p0GwAIB0gIkOGQ4ZmEyMzktYTA5Ny00NjE2LWE4MzgtY2U3ZDQ1MmI4NWVj2AIG4AIB&sid=8c2cf7d3c078e9d81f8744c98543fe93&all_sr_blocks=37077405_91473490_2_2_0;checkin=2023-02-01;checkout=2023-02-02;dest_id=370774;dest_type=hotel;dist=0;group_adults=2;group_children=0;hapos=1;highlighted_blocks=37077405_91473490_2_2_0;hpos=1;matching_block_id=37077405_91473490_2_2_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=37077405_91473490_2_2_0__11800;srepoch=1673236568;srpvid=13421bab1c800114;type=total;ucfs=1&#hotelTmpl">read more</a>
+                <img src="images/Numa_l_Lief.png" class="Numa_l_Lief">
             </div>
             <div class="rechts">
-                <p> Nirvana Kitchen</p>
-                <a href="http://nirvanakitchenleuven.be/menu/">read more</a>
-                <img src="images/nirvana.png" alt="wereld">
+                <p>Urban walls</p>
+                <a href="https://www.booking.com/hotel/be/urban-walls.nl.html?ucfs=1&no_rooms=1&sr_pri_blocks=753095402_331963936_2_0_0__12100&checkout=2023-02-02&aid=304142&matching_block_id=753095402_331963936_2_0_0&srepoch=1673236394&type=total&dist=0&hpos=1&room1=A%2CA&req_children=0&group_children=0&srpvid=83801b54c25c010e&sr_order=popularity&hapos=1&label=gen173nr-1FCAEoggI46AdIM1gEaBWIAQGYARy4AQfIAQ3YAQHoAQH4AQuIAgGoAgO4Apaf7p0GwAIB0gIkOGQ4ZmEyMzktYTA5Ny00NjE2LWE4MzgtY2U3ZDQ1MmI4NWVj2AIG4AIB&sb_price_type=total&all_sr_blocks=753095402_331963936_2_0_0&checkin=2023-02-01&dest_id=7530954&group_adults=2&sid=8c2cf7d3c078e9d81f8744c98543fe93&req_adults=2&dest_type=hotel&highlighted_blocks=753095402_331963936_2_0_0#hotelTmpl">read more</a>
+                <img src="images/Urban_Walls.png" alt="Urban_Walls">
+            </div>
+            <div class="links">
+                <p>hygge</p>
+                <a href="https://www.booking.com/hotel/be/hygge.nl.html?aid=304142&label=gen173nr-1FCAEoggI46AdIM1gEaBWIAQGYARy4AQfIAQ3YAQHoAQH4AQuIAgGoAgO4Arj99p0GwAIB0gIkMGI4YmQ4N2ItM2E4Ni00YTg1LTk5ODYtM2RjMzNhNGE4ZGMw2AIG4AIB&sid=8c2cf7d3c078e9d81f8744c98543fe93&all_sr_blocks=216840004_346812613_0_2_0;checkin=2023-02-01;checkout=2023-02-02;dest_id=-1955538;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=3;highlighted_blocks=216840004_346812613_0_2_0;hpos=3;matching_block_id=216840004_346812613_0_2_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=216840004_346812613_0_2_0__14969;srepoch=1673379520;srpvid=72b38a1f83a00028;type=total;ucfs=1&#hotelTmpl">read more</a>
+                <img src="images/Hygge_Hotel.png"  alt="Hygge_Hotel">
+            </div>
+            <div class="rechts">
+                <p>Hotel La Grande Cloche</p>
+                <a href="https://www.booking.com/hotel/be/grandecloche.nl.html?aid=304142&label=gen173nr-1FCAEoggI46AdIM1gEaBWIAQGYARy4AQfIAQ3YAQHoAQH4AQuIAgGoAgO4Arj99p0GwAIB0gIkMGI4YmQ4N2ItM2E4Ni00YTg1LTk5ODYtM2RjMzNhNGE4ZGMw2AIG4AIB&sid=8c2cf7d3c078e9d81f8744c98543fe93&all_sr_blocks=2007109_95144765_0_34_0;checkin=2023-02-01;checkout=2023-02-02;dest_id=-1955538;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=6;highlighted_blocks=2007109_95144765_0_34_0;hpos=6;matching_block_id=2007109_95144765_0_34_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=2007109_95144765_0_34_0__11224;srepoch=1673379520;srpvid=72b38a1f83a00028;type=total;ucfs=1&#hotelTmpl">read more</a>
+                <img src="images/Hotel_La_Grande_Cloche.png" class="convento">
             </div>
         </section>
     </article>
@@ -51,9 +61,11 @@
                 method="POST"
         >
             <select name = "dropdown" class="dropdown">
-                <option value = "Ristorante Guzzi" selected>Ristorante Guzzi</option>
-                <option value = "wijnbistro Convento" >wijnbistro Convento</option>
-                <option value = "Nirvana Kitchen">Nirvana Kitchen</option>
+                <option value = "Barsey hotel" selected>Barsey hotel</option>
+                <option value = "Numa l lief" >Numa l lief</option>
+                <option value = "Urban walls">Urban walls</option>
+                <option value = "hygge">hygge</option>
+                <option value = "Hotel La Grande Cloche">Hotel La Grande Cloche</option>
             </select>
             <button class="btn btn-primary mt-2" type="submit"><p>Send</p></button>
         </form>
