--- a/2023.html
+++ b/2023.html
@@ -19,16 +19,23 @@
     </ul>
   </nav>
 </header>
-<h2>
+<h2 class="moments">
   Moments
 </h2>
 <section class="moment">
   <div class="tekst">
     <h3>Poescafe</h3>
-    <h4 class="datum">7-01-2023</h4>
-    <h4 class="stad">Leuven</h4>
+    <div>
+    <h4 class="datum">7/01/2023</h4>
+      <div class="plaats">
+      <img src="images/pin.png" alt="pin">
+    <h4>Leuven</h4>
+      </div>
+    </div>
   </div>
+  <div class="momentimg">
   <img src="images/poescafe.png" alt="poescafe">
+  </div>
 </section>
 
 </body>
