--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Voor jou zou ik de maan blussen</h1>
         <ul>
             <li><a class="current" href="Index.html">Chloë</a> </li>
-            <!--<li><a href="2023.html">2023</a> </li>-->
+            <li><a href="2023.html">2023</a> </li>
         </ul>
     </nav>
     </header>
